syntax = "proto3";
option csharp_namespace = "GrpcServer";
package fp_debug;

service FpDebug {
	rpc DebugFuelPOS (FpDebugRequest) returns (FpDebugReply);
}

message FpDebugRequest {
	string stationId = 1;
	string processes = 2;
	int32 debugTime = 3;
}

message FpDebugReply {
	string statusCode = 1;
}